--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
     display: none;
 }
 
+#purposeRow {
+    display: none;
+}
+
+#numberRow {
+    display: none;
+}
+
 .toast-container {
     z-index: 10000;
     max-width: 350px; 
