--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
     display: none;
 }
 
+#appServiceRow {
+    display: none;
+}
+
 .toast-container {
     z-index: 10000;
     max-width: 350px; 
